--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=LeaveAppSystem
+spring.jpa.show-sql=true
+spring.datasource.url=jdbc:mysql://localhost:3306/leaveappsystem?useSSL=true&serverTimezone=Asia/Singapore
+spring.datasource.username=java_developer
+spring.datasource.password=Password123!
+spring.jpa.generate-ddl=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=create
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
