--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=LeaveAppSystem
 spring.jpa.show-sql=true
-spring.datasource.url=jdbc:mysql://localhost:3306/leaveappsystem?useSSL=true&serverTimezone=Asia/Singapore
+spring.datasource.url=jdbc:mysql://localhost:3306/leaveapp?useSSL=true&serverTimezone=Asia/Singapore
 spring.datasource.username=java_developer
 spring.datasource.password=Password123!
 spring.jpa.generate-ddl=true
