--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,13 @@
    			 <artifactId>jakarta.validation-api</artifactId>
     		
 		</dependency>
+
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
