--- a/pom.xml
+++ b/pom.xml
@@ -9,12 +9,11 @@
 		<version>3.3.0</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>sg.nus.iss.com.leaveapp</groupId>
+	<groupId>sg.nus.iss.javaspring.las</groupId>
 	<artifactId>LeaveAppSystem</artifactId>
-	<version>0.1.0-SNAPSHOT</version>
+	<version>0.0.1-SNAPSHOT</version>
 	<name>LeaveAppSystem</name>
 	<description>Leave Application System (Java Spring CA)</description>
-	<packaging>jar</packaging>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
@@ -85,7 +84,6 @@
 			<artifactId>hutool-all</artifactId>
 			<version>5.8.27</version>
 		</dependency>
-		
 	</dependencies>
 
 	<build>
@@ -95,9 +93,6 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
-		<finalName>
-			Team 05 Leave Application System
-		</finalName>
 	</build>
 
 </project>
